--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ numpy = "^1.24.3"
 matplotlib = "^3.7.1"
 seaborn = "^0.12.2"
 jupyter = "^1.0.0"
+scipy = { version = "^1.10.1", python = "<3.11" }
 
 
 [build-system]
